# schema-codegen

./: .gitignore  Cargo.toml  README.md  generated_monster.h  generated_monster.rs  lefthook.yml  monster.fbs
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen-cxx/: Cargo.toml
crates/codegen-cxx/src/: generator.rs  lib.rs
crates/codegen-cxx/tests/: generator_test.rs
crates/codegen-rust/: Cargo.toml
crates/codegen-rust/src/: lib.rs
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/tests/: golden_test.rs
crates/e2e-tests/tests/golden/input/: array.fbs  color.fbs  golden_test__ir_snapshots.snap  player.fbs
crates/e2e-tests/tests/snapshots/: golden_test__ir_snapshots@array.fbs.snap  golden_test__ir_snapshots@color.fbs.snap  golden_test__ir_snapshots@player.fbs.snap
crates/schema-ir/: Cargo.toml
crates/schema-ir/src/: grammar.pest  lib.rs  parser.rs
docs/adr/: 0001-use-c-abi-for-cross-language-ffi.md
examples/: monster.fbs
python/: README.md  noxfile.py  pyproject.toml  visualize.py
