[workspace]
resolver = "2"
members = [
    "crates/schema-ir",
    "crates/codegen-rust",
    "crates/codegen-cxx",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["your-name <you@example.com>"]
repository = "https://github.com/you/schema-codegen"
description = "Schema-driven code generator for Rust <-> C++ (UE) component sync"

# 全クレートで揃えたい依存はここに集約し、
# 各crateのCargo.tomlからは `xxx.workspace = true` で参照する。
# バージョン食い違いによる依存地獄を防ぐのが目的。
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tera = "1"           # コード生成テンプレートエンジン(Jinja2ライク)
clap = { version = "4", features = ["derive"] }
flatbuffers = "24"
insta = { version = "1", features = ["json", "glob"] }  # スナップショットテスト

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
