[workspace]
resolver = "2"
members = [
    "crates/schema-ir",
    "crates/codegen-rust",
    "crates/codegen-cxx",
    "crates/cli",
    "crates/e2e-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["your-name <you@example.com>"]
repository = "https://github.com/you/schema-codegen"
description = "Schema-driven code generator for Rust <-> C++ (UE) component sync"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tera = "1"
clap = { version = "4", features = ["derive"] }
flatbuffers = "24"
insta = { version = "1", features = ["json", "glob"] }
pest = "2"
pest_derive = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
