[project]
name = "schema-tools"
version = "0.1.0"
description = "Prototyping, schema validation, and build orchestration helpers for schema-codegen"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = [
    "nox>=2024.4.15",
    "pytest>=8.0",
    "graphviz>=0.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schema_tools"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
