[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

publish = false

[dependencies]

[dev-dependencies]
schema-ir = { path = "../schema-ir" }
insta = { version = "1.48.0", features = [ "glob" ] }
